fix sizing of call to action section to align withd at 1200px with the rest of the webpage

--- a/style.css
+++ b/style.css
@@ -176,7 +176,6 @@ button {
     margin: auto;
     display: flex;
     flex-wrap: wrap;
-    padding: 40px;
     margin-top: 100px;
     margin-bottom: 100px;
     border-radius: 10px;
@@ -192,6 +191,10 @@ button {
 
 .sign-up {
     align-self: center;
+}
+
+.call-to-action, .sign-up {
+    padding: 40px;
 }
 
 .action.sign-up {
